--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,10 +8,15 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.2",
+    "bootstrap": "^5.2.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
+    "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
+    "use-reducer-logger": "^1.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
