--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "flipcart",
   "version": "1.0.0",
-  "description": "",
+  "description": "#Lessons",
   "main": "index.js",
   "scripts": {
-    "build": "cd backend && npm install  && cd../frontend && npm install && npm run build",
+    "build": "cd backend && npm install && cd ../frontend && npm install && npm run build",
     "start": "node backend/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
